Fix filter command bug
Currently, filter command has some bugs when text input includes spaces. Another bug is deadline filter not working.

Filter command is essential to allow users to find relevant internship entries.

Let's fix the filter command to address all these bugs.